--- a/application.yml
+++ b/application.yml
@@ -11,8 +11,8 @@ microservice:
   payment-service:
     endpoints:
       endpoint:
-        uri: http://payment-service/payment/makePayment
+        uri: "http://payment-service/payment/makePayment"
   order-service:
     endpoints:
       endpoint:
-        uri: http://order-service/orders/order
+        uri: "http://order-service/orders/order"
